# typing_contest

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-05-16-lan-typing-chase.md
docs/superpowers/specs/: 2026-05-16-lan-typing-chase-design.md
src/typing_chase/: __init__.py  config.py  game_state.py  main.py  networking.py  renderer.py  screens.py  typing_logic.py
tests/: test_game_state.py  test_networking.py  test_screens.py  test_typing_logic.py
