[project]
name = "typing-chase"
version = "0.1.0"
description = "LAN two-player typing chase game"
requires-python = ">=3.11"
dependencies = [
  "pygame>=2.5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
typing-chase = "typing_chase.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
