[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "typing-chase"
version = "0.1.0"
description = "LAN two-player typing chase game"
requires-python = ">=3.11"
dependencies = [
  "pygame>=2.5.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
typing-chase = "typing_chase.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
